syntax = "proto3";

package iam.v1;

option go_package = "github.com/openhexes/proto;iamv1";

import "google/protobuf/timestamp.proto";

message Account {
    message Meta {
        bool active = 1;
        google.protobuf.Timestamp created_at = 2;
        string display_name = 3;
        string picture = 4;
    }

    string id = 1;
    Account.Meta meta = 2;
    string email = 3;
}

message ResolveAccountRequest {}

message ResolveAccountResponse {
    Account account = 1;
}

message ListAccountsRequest {}

message ListAccountsResponse {
    repeated Account accounts = 1;
}

message UpdateAccountActivationRequest {
    map<string, bool> id_to_activation = 1;
}

message UpdateAccountActivationResponse {}

service IAMService {
    rpc ResolveAccount(ResolveAccountRequest) returns (ResolveAccountResponse);
    rpc ListAccounts(ListAccountsRequest) returns (stream ListAccountsResponse);
    rpc UpdateAccountActivation(UpdateAccountActivationRequest) returns (UpdateAccountActivationResponse);
}
